# Rei1.0

./: .gitignore  README.md  main.py  main_pinocchio.py  pyproject.toml  spec_basic.json
developer/benchmarks/: robokots_jacobian_mul.py  urdf_rust_kots_vs_pinocchio.py
docs/: custom-robotics-backend.md  dsl.md
docs/architecture/: core-backend-optimize-split.md
eiopt/: __init__.py  ioc.py  report.py  simplex_weight_solver.py  term_gradient_matrix.py  xops.py
eiopt/adapters/: __init__.py  joint_q.py
eiopt/backends/: __init__.py  _spatial.py  _template.py  kots.py  pinocchio.py  trajectory_adapter.py
eiopt/core/: __init__.py  bspline.py  mapping.py  (+5 more)
examples/: 01_minimize_quadratic.py  02_get_state_minimal.py  03_toml_problem.py  04_pinocchio_ik.py  05_robokots_ik.py  06_pinocchio_trajectory_dynamics.py  07_robokots_trajectory_dynamics.py  08_camera_calibration.py  09_kots_vision_composite.py  10_stationarity_ioc.py  11_forward_then_inverse_ioc.py  README.md  _kots_traj_common.py  extract_joint_q_csv.py  get_state_minimal.py  json_spec_problem.py  main.py  main_kots.py  main_pinocchio.py  main_pinocchio_traj.py  main_robokots.py  main_robokots_traj.py  main_robokots_traj_dq.py  main_robokots_traj_dynamics.py  minimize_quadratic.py  pinocchio_ik.py  pinocchio_trajectory_dynamics.py  plot_joint_data.py  robokots_ik.py  robokots_trajectory_dynamics.py  stationarity_ioc.py  test_liteopt.py  toml_spec_problem.py
rei/: __init__.py
tests/: test_backends_problem_adapter.py  test_backends_state_composite.py  test_backends_trajectory_adapter.py  test_dsl_component_split.py  test_eiopt_basic.py  test_equations_flow.py  test_extract_joint_q_csv.py  test_ioc_report.py  test_kots_api_helpers.py  test_kots_builder_dynamics_mock.py  test_kots_urdf_json_parity.py  test_kots_vision_composite_integration.py  test_namespace_layering.py  test_optimize_textlog.py  test_pinocchio_trajectory_compile_mock.py  test_plot_joint_data.py  test_plot_term_attrs.py  test_problem_caps.py  test_problem_spec.py  test_problem_spec_examples.py  test_robotics_provider_template.py  test_solve_check.py  test_solvers_dispatch_options.py  test_solvers_liteopt_mock.py  test_trajectory_compile_core.py  test_vision_calibration_mock.py  test_vision_compile_core.py  test_vision_pinhole_model.py  test_vision_provider_template.py
(+179 files in other folders)
