[project]
name = "eiopt"
version = "0.1.0"
description = "Optimization utilities (ported from RoboKots inward)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["eiopt*"]

[dependency-groups]
pinocchio = [
    "pin>=3.8.0",
]
