[project]
name = "rei"
version = "0.1.0"
description = "Capability-driven numerical problem toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.0",
]

[project.optional-dependencies]
solver-scipy = [
    "scipy>=1.17.0",
]
solver-cyipopt = [
    "cyipopt>=1.6.1",
]
solver-liteopt = [
    "liteopt",
]
solvers = [
    "scipy>=1.17.0",
    "cyipopt>=1.6.1",
    "liteopt",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rei*"]

[tool.uv.sources]
robokots = { git = "https://github.com/MathRobotics/RoboKots.git", rev = "develop" }

[dependency-groups]
kots = [
    "mathrobo>=0.0.3",
    "robokots",
]
pinocchio = [
    "pin>=3.8.0",
]
solver-liteopt = [
    "liteopt>=0.1.6",
]
